syntax = "proto3";

option csharp_namespace = "Frontend";

package ingredients;

service IngredientsService {
  rpc GetToppings (GetToppingsRequest) returns (GetToppingsResponse);
}

message GetToppingsRequest { }

message GetToppingsResponse {
  repeated AvailableTopping toppings = 1;
}

message Topping {
  string id = 1;
  string name = 2;
  double price = 3;
}

message AvailableTopping {
  Topping topping = 1;
  int32 quantity = 2;
}
