syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Orders";

package orders;

service OrdersService {
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
}

message PlaceOrderRequest {
  string crust_id = 1;
  repeated string topping_ids = 2;
}

message PlaceOrderResponse {
  google.protobuf.Timestamp time = 1;
}

message SubscribeRequest { }

message SubscribeResponse {
  string crust_id = 1;
  repeated string topping_ids = 2;
  google.protobuf.Timestamp time = 3;
}
